fix overflow for details image and add effect

--- a/public/style/details.css
+++ b/public/style/details.css
@@ -40,15 +40,18 @@ body {
 }
 
 .main_image {
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 400px; 
   padding-top: 2rem;
+  overflow: hidden; 
+  border: 2px solid #ccc; 
+  border-radius: 15px;
 }
 
 .main_image img {
   width: 100%;
-  object-fit: cover;
-
+  height: 100%;
+  object-fit: contain; 
   border-radius: 15px;
 }
 
@@ -57,8 +60,12 @@ body {
   height: 75px;
   padding: 5px;
   border-radius: 15px;
+  transition: transform 0.3s ease; 
 }
 
+.option img:hover {
+  transform: scale(1.1); 
+}
 .right {
   padding: 50px 100px 50px 50px;
 }
